--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </head>
         <header>
         <a href="thefeed.html">
-            <img src="IMG/Original content /IMG_0394.png" alt="logo image">
+            <img src="img/Hendrick_thefeed.gif" alt="goldfish swimming logo image">
         </header>
         <!--<img src="img/" alt="my own image"
 
