--- a/thefeed.html
+++ b/thefeed.html
@@ -14,18 +14,25 @@
     </head>
     <body> 
         <nav>
-            <img src="img/">
+            
             <div id="friends" style="border: 2px solid #000; border-radius: 10px; padding: 20px;">
 
                 <h2>The Feed</h2>
                 <br>
+                <a href="https://miguelusfca.github.io/TheFeed/">
+                <h1>Miguel</h1>
+                </a>
+                <a href="https://mikesmith-23.github.io/thefeed">
                 <h1>Mike</h1>
+                </a>
                 <h1>Finn</h1>
                 <h1>Andreas</h1>
                 <h1>Jack</h1>
                 <h1>Zane</h1>
                 <h1>Milo</h1>
+                <a href="https://asfukushima.github.io/blackstar/">
                 <h1>Arisa</h1>
+                </a>
                 <h1>Hendrick</h1>
                 <h1>Petra</h1>
                 <h1>Tracy</h1>
@@ -40,45 +47,45 @@
             </section>
             <section>
                 <video width="320" controls>
-                    <source src="img/superpower.mp4" type="video/mp4">
+                    <source src="img/superpower.mp4" type="video/mp4" alt="a dacing video">
                     Your browser does not support the video tag.
                   </video>
-                  <p>write something</p>
+                  <p>We practice dancing during CompSigh Night and have fun</p>
+            </section>
+            <section id="group">
+                <img src="img/groupphoto1.jpg" alt="group phot with the club in the middle of the night" width="300">
+                <p>Went to Japan-town for dinner with club members</p>
+            </section>
+            <section id="group">
+                <img src="img/groupphoto2.jpg" alt="another group photo with the Computer Science club" width="300">
+                <p>Dinner photo with Comp Sigh before eating ramen</p>
             </section>
             <section>
-                <img src="img/photo7.png" width="300">
+                <img src="">
+                <p>write something</p>
+            </section>
+            <section id="mall">
+                <img src="" >
                 <p>write something</p>
             </section>
             <section>
-                <img src="img/IMG_20240907_204707481.jpg">
+                <img src="" >
                 <p>write something</p>
             </section>
             <section>
-                <img src="img/photo8.png">
+                <img src="" >
                 <p>write something</p>
             </section>
             <section>
-                <img src="img/photo6.png" width="300">
+                <img src="">
                 <p>write something</p>
             </section>
             <section>
-                <img src="img/photo5.png" width="300">
+                <img src="">
                 <p>write something</p>
             </section>
             <section>
-                <img src="img/photo4.png" width="300">
-                <p>write something</p>
-            </section>
-            <section>
-                <img src="img/photo3.png" width="300">
-                <p>write something</p>
-            </section>
-            <section>
-                <img src="img/photo2.png">
-                <p>write something</p>
-            </section>
-            <section>
-                <img src="img/photo1.png">
+                <img src="">
                 <p>write something</p>
             </section>
         </main>
