--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </head>
         <header>
         <a href="thefeed.html">
-            <img src="img/Hendrick_thefeed.gif" alt="goldfish swimming logo image">
+            <img src="img/Hendrick_thefeed.gif" alt="goldfish swimming logo image" width="300">
         </header>
         <!--<img src="img/" alt="my own image"
 
